--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,20 @@
 {
+  "version": 2,
   "builds": [
     {
       "src": "app/main.py",
-      "use": "@vercel/python"
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    },
+    {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticroot"
+      }
     }
   ],
   "routes": [
