--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,15 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "app/main.py",
-      "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
-      }
-    },
-    {
-      "src": "build_files.sh",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "staticroot"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "app/main.py"
-    }
-  ]
-}
+	"devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
+	"builds": [
+	  {
+		"src": "app/main.py",
+		"use": "@vercel/python"
+	  }
+	],
+	"routes": [
+	  {
+		"src": "/(.*)",
+		"dest": "app/main.py"
+	  }
+	]
+  }
