--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,20 @@
 {
-	"devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
-	"builds": [
-	  {
-		"src": "app/main.py",
-		"use": "@vercel/python"
-	  }
-	],
-	"routes": [
-	  {
-		"src": "/(.*)",
-		"dest": "app/main.py"
-	  }
-	]
-  }
+  "version": 2,
+  "builds": [
+    {
+      "src": "asgi.py",
+      "use": "@vercel/python",
+      "config": {
+        "maxLambdaSize": "15mb",
+        "runtime": "python3.9"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "asgi.py"
+    },
+    { "src": "app/main.py", "methods": ["GET", "POST"] }
+  ]
+}
