--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,16 @@
       "config": {
         "maxLambdaSize": "15mb",
         "runtime": "python3.9"
+      },
+      {
+      "src": "build_files.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "."
       }
     }
+    },
+    
   ],
   "routes": [
     {
