--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aiosmtplib==4.0.0
 annotated-types==0.7.0
 anyio==4.8.0
 bcrypt==4.0.1
@@ -12,6 +13,8 @@ fastapi==0.115.8
 greenlet==3.1.1
 h11==0.14.0
 idna==3.10
+Jinja2==3.1.6
+MarkupSafe==3.0.2
 passlib==1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
