--- a/.github/workflows/health-check.yml
+++ b/.github/workflows/health-check.yml
@@ -2,13 +2,13 @@ name: Health Check
 
 on:
   schedule:
-    - cron: '*/14 * * * *'  # Runs every 14 minutes
+    - cron: '*/10 * * * *'  # Runs every 14 minutes
 
 jobs:
   health-check:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Make request to /API/health
+      - name: Checking
         run: |
-          curl -X GET "https://lanceraa-backend-a2mt.onrender.com/api/health" -o response.txt -w "HTTP Status: %{http_code}\n"
+           curl -X GET "https://lanceraa-backend-a2mt.onrender.com/api/health" -o response.txt -w "HTTP Status: %{http_code}\n"
